--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 23 02:02:50 2006  Tim Janik  <timj@gtk.org>
+
+	* web/Makefile.am: dependency fixup.
+
 Tue Mar 21 00:55:27 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/Makefile.am:
