--- a/doxer/ChangeLog
+++ b/doxer/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 23 02:47:28 2006  Tim Janik  <timj@gtk.org>
+
+	* docu-main.doxi: more fixups.
+
 Thu Mar 23 01:56:30 2006  Tim Janik  <timj@gtk.org>
 
 	* DoxiParser.py: flag nestable macros appropriately.
