translation updates by Michele Petrecca <michelinux@alice.it>.
Wed Mar 29 15:15:31 2006  Tim Janik  <timj@gtk.org>

        * it.po: translation updates by Michele Petrecca <michelinux@alice.it>.

svn path=/trunk/; revision=3535

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 29 15:15:31 2006  Tim Janik  <timj@gtk.org>
+
+	* it.po: translation updates by Michele Petrecca <michelinux@alice.it>.
+
 Sun Mar 12 12:02:47 2006  Tim Janik  <timj@gtk.org>
 
 	* updated source file lists and .po files.
