--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,10 @@
+Mon Apr  3 21:29:18 2006  Tim Janik  <timj@gtk.org>
+
+	* autogen.sh:
+	* Makefile.am: upgrade to automake-1.9.
+
+	* configure.in: fixed buglets.
+
 Thu Mar  9 18:07:47 2006  Tim Janik  <timj@gtk.org>
 
 	* bsemididevice-alsa.c: 
