--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr  3 21:51:28 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/subnormals.cc: first test for correctness, then for performance.
+
 Mon Apr  3 15:50:14 2006  Stefan Westerfeld <stefan@space.twc.de>
 
 	* tests/subnormals.cc tests/subnormals-aux.cc: Added code which
