--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Apr  4 20:10:39 2006  Tim Janik  <timj@gtk.org>
+
+	* tools/cutvorbis.c:
+	* tools/magictest.c:
+	* tools/mathtests.c: CVS copied.
+
 Tue Apr  4 02:08:16 2006  Tim Janik  <timj@gtk.org>
 
 	* slowtests/Makefile.am: build and check perftest testwavechunk.
