--- a/TODO
+++ b/TODO
@@ -735,6 +735,12 @@ tests, bsefcompare:
 win32 port:
 - beast --bse-driver-list freezes the windows system completely
 
+oversampling:
+- polish octave scripts
+- design coefficients for 8, 12, 16, 20, 24 bits
+- move Resampler2 API to header
+- write downsampling datahandle
+
 Misc Buglets/Feature Requests:
  - add a dependancy to $SFIDL for beast-gtk/bstrecords.idl
  - Makefile.plugins doesn't get regenerated properly
