--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Wed Apr  5 02:11:07 2006  Tim Janik  <timj@gtk.org>
+
+	* birnettests.h: removed unused TFAIL() macro. TERROR() is more
+	elaborate anyway and can be used instead.
+
 Tue Apr  4 21:58:49 2006  Tim Janik  <timj@gtk.org>
 
 	* birnettests.h: allow printf-style arguments to TSTART().
