--- a/TODO
+++ b/TODO
@@ -739,7 +739,9 @@ oversampling:
 - polish octave scripts
 - design coefficients for 8, 12, 16, 20, 24 bits
 - move Resampler2 API to header
+- check why performance on one of my laptops (voyager) was so bad for SSE code
 - write downsampling datahandle
+- add resampler documentation in synthesis-details.doxi
 
 Misc Buglets/Feature Requests:
  - add a dependancy to $SFIDL for beast-gtk/bstrecords.idl
