--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sat Apr  8 02:09:15 2006  Tim Janik  <timj@gtk.org>
+
+	* bseloader-mad.c:
+	* bseloader-wav.c: use basename instead of full file path for internal
+	wave names.
+
 Tue Apr  4 21:59:39 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/cutvorbis.c:
