--- a/TODO
+++ b/TODO
@@ -738,10 +738,9 @@ win32 port:
 - beast --bse-driver-list freezes the windows system completely
 
 oversampling:
-- coding style: put spaces around mathematical operators like +,/,-,*,%,&,| etc.
 - polish octave scripts
 - design coefficients for 8, 12, 16, 20, 24 bits
-- move Resampler2 API to header
+- move Resampler2Factory API to header
 - check why performance on one of my laptops (voyager) was so bad for SSE code
 - write downsampling datahandle
 - add resampler documentation in synthesis-details.doxi
